Styles System => Stable Grouping in General.xaml and as a ResourceDictionary in app.xaml WhiteTheme.xaml
Remarks: This Style System allows the use of "keys" in any xaml style

--- a/XF_FoodApp/XF_FoodApp/XF_FoodApp.csproj
+++ b/XF_FoodApp/XF_FoodApp/XF_FoodApp.csproj
@@ -27,7 +27,7 @@
     <EmbeddedResource Update="Styles\Sizes.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Styles\Text.xaml">
+    <EmbeddedResource Update="Styles\Texts.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Styles\WhiteTheme.xaml">
