--- a/XF_FoodApp/XF_FoodApp.iOS/XF_FoodApp.iOS.csproj
+++ b/XF_FoodApp/XF_FoodApp.iOS/XF_FoodApp.iOS.csproj
@@ -70,6 +70,7 @@
     <BundleResource Include="Resources\ProductSans-Bold.ttf" />
     <BundleResource Include="Resources\ProductSans-BoldItalic.ttf" />
     <BundleResource Include="Resources\materialdesignicons-webfont.ttf" />
+    <BundleResource Include="Resources\CustomIconFont.ttf" />
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json">
