--- a/XF_FoodApp/XF_FoodApp.Android/XF_FoodApp.Android.csproj
+++ b/XF_FoodApp/XF_FoodApp.Android/XF_FoodApp.Android.csproj
@@ -78,6 +78,7 @@
     <AndroidAsset Include="Assets\FontsFamily\ProductSans-Regular.ttf" />
     <AndroidAsset Include="Assets\FontsFamily\ProductSans-Bold.ttf" />
     <AndroidAsset Include="Assets\materialdesignicons-webfont.ttf" />
+    <AndroidAsset Include="Assets\CustomIconFont.ttf" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
