Styles System => Stable Android Add Discover.xaml and Favourite.xaml
Remarks:
LineBreakMode of the TailTruncation type was added, a faithful feature of the Adobe XD interface design was obtained.

--- a/XF_FoodApp/XF_FoodApp/XF_FoodApp.csproj
+++ b/XF_FoodApp/XF_FoodApp/XF_FoodApp.csproj
@@ -37,5 +37,8 @@
     <EmbeddedResource Update="Views\Discover.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\Favourite.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
