Styles System => Stable Android Add Orders Pages and Profile.xaml, changed in Favourite.xaml
Remarks:
In the Orders pages it is necessary to review these interfaces since good performance is failing, in Profile.xaml it is necessary to make it responsive.

--- a/XF_FoodApp/XF_FoodApp.iOS/XF_FoodApp.iOS.csproj
+++ b/XF_FoodApp/XF_FoodApp.iOS/XF_FoodApp.iOS.csproj
@@ -400,4 +400,13 @@
   <ItemGroup>
     <BundleResource Include="Resources\bookmark1Icon%402x.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\img_profile.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\img_profile%402x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\img_profile%403x.png" />
+  </ItemGroup>
 </Project>
