Styles System => Stable Android Add Flyout and Icon Font of MaterialIconFont, changed in Icons.xaml and FontFamily "Pacifico" for him Flyout.
Remarks:
The Flyout ItemTemplate.xaml item separates the title icons equally and therefore the spaces between each segment, there must be a way to separate into groups, also in floating tabs you must create a route back to the main tabs of the application.

--- a/XF_FoodApp/XF_FoodApp.iOS/Info.plist
+++ b/XF_FoodApp/XF_FoodApp.iOS/Info.plist
@@ -40,6 +40,7 @@
 		<string>ProductSans-BoldItalic.ttf</string>
 		<string>ProductSans-Italic.ttf</string>
 		<string>ProductSans-Regular.ttf</string>
+        <string>Pacifico-Regular.ttf</string>
         <string>materialdesignicons-webfont.ttf</string>
         <string>CustomIconFont.ttf</string>
 	</array>
