--- a/XF_FoodApp/XF_FoodApp/XF_FoodApp.csproj
+++ b/XF_FoodApp/XF_FoodApp/XF_FoodApp.csproj
@@ -35,6 +35,9 @@
     <EmbeddedResource Update="Styles\Themes\WhiteTheme.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\BlankPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\CurrentOrders.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
