--- a/XF_FoodApp/XF_FoodApp/XF_FoodApp.csproj
+++ b/XF_FoodApp/XF_FoodApp/XF_FoodApp.csproj
@@ -10,7 +10,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.2.0.848062" />  
+    <None Remove="Images\img_bgflyout.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Images\img_bgflyout.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Xamarin.Forms" Version="4.3.0.908675" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />  
     <PackageReference Include="Xamarin.Forms.DebugRainbows" Version="1.0.16" />  
     <PackageReference Include="Xamarin.Forms.Visual.Material" Version="4.2.0.848062" />
